Initial Work On irc client

--- a/DestinyWeaponSwap/DestinyWeaponSwap.vbproj
+++ b/DestinyWeaponSwap/DestinyWeaponSwap.vbproj
@@ -46,6 +46,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IrcDotNet">
+      <HintPath>..\packages\IrcDotNet.0.6.1\lib\dnx451\IrcDotNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -78,6 +81,12 @@
       <DependentUpon>DestinyWeaponSwap.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="irc.Designer.vb">
+      <DependentUpon>irc.vb</DependentUpon>
+    </Compile>
+    <Compile Include="irc.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -97,6 +106,9 @@
   <ItemGroup>
     <EmbeddedResource Include="DestinyWeaponSwap.resx">
       <DependentUpon>DestinyWeaponSwap.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="irc.resx">
+      <DependentUpon>irc.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
