User can now enter all info required for changing guns in pool.
Settings added to save state of application when it closes, and loads when its opened.

--- a/DestinyWeaponSwap/App.config
+++ b/DestinyWeaponSwap/App.config
@@ -1,6 +1,111 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DestinyWeaponSwap.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <DestinyWeaponSwap.My.MySettings>
+            <setting name="Nick" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Pass" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Channel" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LocW1" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW4" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW5" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW6" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW7" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW8" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW9" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW10" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW11" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW12" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW13" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LocW14" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Weapon1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon9" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon10" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon11" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon12" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon13" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Weapon14" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoJoin" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </DestinyWeaponSwap.My.MySettings>
+    </userSettings>
 </configuration>
