starting a "pool cap" option to increase or decrease the number of weapons in the total pool.

--- a/DestinyWeaponSwap/App.config
+++ b/DestinyWeaponSwap/App.config
@@ -20,91 +20,94 @@
                 <value />
             </setting>
             <setting name="LocW1" serializeAs="String">
-                <value>0</value>
+                <value>2</value>
             </setting>
             <setting name="LocW2" serializeAs="String">
-                <value>0</value>
+                <value>1</value>
             </setting>
             <setting name="LocW3" serializeAs="String">
-                <value>0</value>
+                <value>3</value>
             </setting>
             <setting name="LocW4" serializeAs="String">
-                <value>0</value>
+                <value>4</value>
             </setting>
             <setting name="LocW5" serializeAs="String">
-                <value>0</value>
+                <value>5</value>
             </setting>
             <setting name="LocW6" serializeAs="String">
-                <value>0</value>
+                <value>6</value>
             </setting>
             <setting name="LocW7" serializeAs="String">
-                <value>0</value>
+                <value>7</value>
             </setting>
             <setting name="LocW8" serializeAs="String">
-                <value>0</value>
+                <value>9</value>
             </setting>
             <setting name="LocW9" serializeAs="String">
-                <value>0</value>
+                <value>10</value>
             </setting>
             <setting name="LocW10" serializeAs="String">
-                <value>0</value>
+                <value>11</value>
             </setting>
             <setting name="LocW11" serializeAs="String">
-                <value>0</value>
+                <value>8</value>
             </setting>
             <setting name="LocW12" serializeAs="String">
-                <value>0</value>
+                <value>12</value>
             </setting>
             <setting name="LocW13" serializeAs="String">
-                <value>0</value>
+                <value>13</value>
             </setting>
             <setting name="LocW14" serializeAs="String">
-                <value>0</value>
+                <value>14</value>
             </setting>
             <setting name="Weapon1" serializeAs="String">
-                <value />
+                <value>Hawksaw</value>
             </setting>
             <setting name="Weapon2" serializeAs="String">
-                <value />
+                <value>Hawkmoon</value>
             </setting>
             <setting name="Weapon3" serializeAs="String">
-                <value />
+                <value>LastWord</value>
             </setting>
             <setting name="Weapon4" serializeAs="String">
-                <value />
+                <value>MIDA</value>
             </setting>
             <setting name="Weapon5" serializeAs="String">
-                <value />
+                <value>MonteCarlo</value>
             </setting>
             <setting name="Weapon6" serializeAs="String">
-                <value />
+                <value>NoLandBeyond</value>
             </setting>
             <setting name="Weapon7" serializeAs="String">
-                <value />
+                <value>NTTE</value>
             </setting>
             <setting name="Weapon8" serializeAs="String">
-                <value />
+                <value>RedDeath</value>
             </setting>
             <setting name="Weapon9" serializeAs="String">
-                <value />
+                <value>SurosRegime</value>
             </setting>
             <setting name="Weapon10" serializeAs="String">
-                <value />
+                <value>Thorn</value>
             </setting>
             <setting name="Weapon11" serializeAs="String">
-                <value />
+                <value>PDX45</value>
             </setting>
             <setting name="Weapon12" serializeAs="String">
-                <value />
+                <value>UniversalRemote</value>
             </setting>
             <setting name="Weapon13" serializeAs="String">
-                <value />
+                <value>Vex</value>
             </setting>
             <setting name="Weapon14" serializeAs="String">
-                <value />
+                <value>Zhalo</value>
             </setting>
             <setting name="AutoJoin" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="PoolCap" serializeAs="String">
+                <value>14</value>
             </setting>
         </DestinyWeaponSwap.My.MySettings>
     </userSettings>
