starting a change point feature that will allow users to move the location where they want the pixel check to be performed.

--- a/DestinyWeaponSwap/App.config
+++ b/DestinyWeaponSwap/App.config
@@ -109,6 +109,12 @@
             <setting name="PoolCap" serializeAs="String">
                 <value>14</value>
             </setting>
+            <setting name="PointX" serializeAs="String">
+                <value>1477</value>
+            </setting>
+            <setting name="PointY" serializeAs="String">
+                <value>446</value>
+            </setting>
         </DestinyWeaponSwap.My.MySettings>
     </userSettings>
 </configuration>
