I did lots, broke more, then tried to fix it. Sorta successful.

--- a/DestinyWeaponSwap/App.config
+++ b/DestinyWeaponSwap/App.config
@@ -62,7 +62,7 @@
                 <value>14</value>
             </setting>
             <setting name="Weapon1" serializeAs="String">
-                <value>Hawksaw</value>
+                <value>Random</value>
             </setting>
             <setting name="Weapon2" serializeAs="String">
                 <value>Hawkmoon</value>
@@ -114,6 +114,18 @@
             </setting>
             <setting name="PointY" serializeAs="String">
                 <value>446</value>
+            </setting>
+            <setting name="Weapon15" serializeAs="String">
+                <value>Hawksaw</value>
+            </setting>
+            <setting name="LocW15" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Random" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="RandomOrNo" serializeAs="String">
+                <value>1</value>
             </setting>
         </DestinyWeaponSwap.My.MySettings>
     </userSettings>
